Đã gắn mọi Link có thể gắn
 - và ẩn những nút chưa có link để gắn

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-i18next": "^14.0.0",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.0",
+    "react-scroll": "^1.9.0",
     "react-spring": "^9.7.3",
     "react-swipeable": "^7.0.1",
     "redux": "^5.0.1",
@@ -63,6 +64,7 @@
     "@typescript-eslint/parser": "^6.19.1",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
+    "react-router-dom": "^6.22.2",
     "simplebar-react": "^3.2.4",
     "typescript": "^5",
     "webpack-bundle-analyzer": "^4.10.1"
