--- a/.env.dev
+++ b/.env.dev
@@ -1,7 +1,7 @@
 NEXT_PUBLIC_GOOGLE_API_KEY=
 NEXT_PUBLIC_GOOGLE_AUTH_API_KEY=
-NEXT_PUBLIC_MOBILE_API=https://api-dev.carbonasean.net
-NEXT_PUBLIC_DOMAIN=https://web-dev.carbonasean.net
+NEXT_PUBLIC_MOBILE_API=
+NEXT_PUBLIC_DOMAIN=
 NEXT_PUBLIC_WALLET_API=
 
 NEXT_PUBLIC_GTAG=
