--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.6.5",
     "date-fns": "^3.3.1",
     "dotenv": "^16.3.1",
+    "jquery": "^3.7.1",
     "moment": "^2.30.1",
     "mui": "^0.0.1",
     "next": "14.1.0",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@types/i18next": "^13.0.0",
+    "@types/jquery": "^3.5.29",
     "@types/node": "^20",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18.2.48",
