--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/styled-components": "^5.1.34",
     "@web3-react/types": "^8.2.3",
     "axios": "^1.6.5",
+    "cors": "^2.8.5",
     "date-fns": "^3.3.1",
     "dotenv": "^16.3.1",
     "jquery": "^3.7.1",
