--- a/.env.prod
+++ b/.env.prod
@@ -4,7 +4,7 @@ NEXT_PUBLIC_MOBILE_API=https://api-dev.carbonasean.net
 NEXT_PUBLIC_DOMAIN=https://web-dev.carbonasean.net
 NEXT_PUBLIC_WALLET_API=
 
-NEXT_PUBLIC_GTAG=
+NEXT_PUBLIC_GTAG=G-H23Z2RWE41
 NEXT_PUBLIC_ANALYZE=true
 
 NEXT_PUBLIC_SOCKET_API=
