--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "date-fns": "^3.3.1",
     "dotenv": "^16.3.1",
+    "framer-motion": "^11.2.10",
     "jquery": "^3.7.1",
     "moment": "^2.30.1",
     "mui": "^0.0.1",
